# quantforge

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/go/: go.mod  main.go
examples/python/: sma_crossover.py
examples/typescript/: package.json  sma_crossover.ts  tsconfig.json
observability/: prometheus.yml
quantforge/adapters/: base.py  ccxt_adapter.py  forex_adapter.py  synthetic.py  yfinance_adapter.py
quantforge/api/: app.py  routes.py
quantforge/core/: events.py  models.py
quantforge/engine/: broker.py  emitter.py  portfolio.py  session_manager.py
quantforge/observability/: logging.py  metrics.py
tests/: conftest.py
tests/integration/: test_api.py  test_session.py
tests/unit/: test_broker.py  test_ccxt_adapter.py  test_emitter.py  test_forex_adapter.py  test_models.py  test_portfolio.py  test_synthetic.py  test_yfinance_adapter.py
