[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantforge"
version = "0.1.0"
description = "Language-agnostic backtesting and paper trading engine"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "yfinance>=0.2.40",
    "ccxt>=4.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "bandit[toml]>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
